# LogAWStudent

./: .env_example  .gitignore  .pyproject.toml.swp  README.md  loginUpAWS.sh  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/logawstudent/: auth.py  cli.py  core.py  lab.py  main.py  utils.py
src/logawstudent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
